[project]
name = "crypto"
version = "1.0.0"
description = "Assignments for the 'Modular Arithmetics & Cryptography' course at UBB Computer Science"
authors = [
    {name = "culbec",email = "profir.alexx@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sympy (>=1.14.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
